src/external/clay/clay.h

// Utility Structs -------------------------

// Note: Clay_String is not guaranteed to be null terminated. It may be if
// created from a literal C string, but it is also used to represent slices.
typedef struct {
    // Set this boolean to true if the char* data underlying this string will
    // live for the entire lifetime of the program. This will automatically be
    // set for strings created with CLAY_STRING, as the macro requires a string
    // literal.
    bool isStaticallyAllocated;
    int32_t length;
    // The underlying character memory. Note: this will not be copied and will
    // not extend the lifetime of the underlying memory.
    const char *chars;
} Clay_String;
// Internally clay conventionally represents colors as 0-255, but interpretation
// is up to the renderer.
typedef struct {
    float r, g, b, a;
} Clay_Color;
// Primarily created via the CLAY_ID(), CLAY_IDI(), CLAY_ID_LOCAL() and
// CLAY_IDI_LOCAL() macros. Represents a hashed string ID used for identifying
// and finding specific clay UI elements, required by functions such as
// Clay_PointerOver() and Clay_GetElementData().
typedef struct {
    uint32_t id;     // The resulting hash generated from the other fields.
    uint32_t offset; // A numerical offset applied after computing the hash from
                     // stringId.
    uint32_t baseId; // A base hash value to start from, for example the parent
                     // element ID is used when calculating CLAY_ID_LOCAL().
    Clay_String stringId; // The string id to hash.
} Clay_ElementId;
// Controls the "radius", or corner rounding of elements, including rectangles,
// borders and images. The rounding is determined by drawing a circle inset into
// the element corner by (radius, radius) pixels.
typedef struct {
    float topLeft;
    float topRight;
    float bottomLeft;
    float bottomRight;
} Clay_CornerRadius;
// Element Configs ---------------------------

// Controls the direction in which child elements will be automatically laid
// out.
typedef CLAY_PACKED_ENUM{
    // (Default) Lays out child elements from left to right with increasing x.
    CLAY_LEFT_TO_RIGHT,
    // Lays out child elements from top to bottom with increasing y.
    CLAY_TOP_TO_BOTTOM,
} Clay_LayoutDirection;
// Controls the alignment along the x axis (horizontal) of child elements.
typedef CLAY_PACKED_ENUM{
    // (Default) Aligns child elements to the left hand side of this element,
    // offset by padding.width.left
    CLAY_ALIGN_X_LEFT,
    // Aligns child elements to the right hand side of this element, offset by
    // padding.width.right
    CLAY_ALIGN_X_RIGHT,
    // Aligns child elements horizontally to the center of this element
    CLAY_ALIGN_X_CENTER,
} Clay_LayoutAlignmentX;
// Controls the alignment along the y axis (vertical) of child elements.
typedef CLAY_PACKED_ENUM{
    // (Default) Aligns child elements to the top of this element, offset by
    // padding.width.top
    CLAY_ALIGN_Y_TOP,
    // Aligns child elements to the bottom of this element, offset by
    // padding.width.bottom
    CLAY_ALIGN_Y_BOTTOM,
    // Aligns child elements vertically to the center of this element
    CLAY_ALIGN_Y_CENTER,
} Clay_LayoutAlignmentY;
// Controls how the element takes up space inside its parent container.
typedef CLAY_PACKED_ENUM{
    // (default) Wraps tightly to the size of the element's contents.
    CLAY__SIZING_TYPE_FIT,
    // Expands along this axis to fill available space in the parent element,
    // sharing it with other GROW elements.
    CLAY__SIZING_TYPE_GROW,
    // Expects 0-1 range. Clamps the axis size to a percent of the parent
    // container's axis size minus padding and child gaps.
    CLAY__SIZING_TYPE_PERCENT,
    // Clamps the axis size to an exact size in pixels.
    CLAY__SIZING_TYPE_FIXED,
} Clay__SizingType;
// Controls how child elements are aligned on each axis.
typedef struct {
    Clay_LayoutAlignmentX x; // Controls alignment of children along the x axis.
    Clay_LayoutAlignmentY y; // Controls alignment of children along the y axis.
} Clay_ChildAlignment;
// Controls the minimum and maximum size in pixels that this element is allowed
// to grow or shrink to, overriding sizing types such as FIT or GROW.
typedef struct {
    float min; // The smallest final size of the element on this axis will be
               // this value in pixels.
    float max; // The largest final size of the element on this axis will be
               // this value in pixels.
} Clay_SizingMinMax;
// Controls the sizing of this element along one axis inside its parent
// container.
typedef struct {
    union {
        Clay_SizingMinMax
            minMax; // Controls the minimum and maximum size in pixels that this
                    // element is allowed to grow or shrink to, overriding
                    // sizing types such as FIT or GROW.
        float percent; // Expects 0-1 range. Clamps the axis size to a percent
                       // of the parent container's axis size minus padding and
                       // child gaps.
    } size;
    Clay__SizingType type; // Controls how the element takes up space inside its
                           // parent container.
} Clay_SizingAxis;
// Controls the sizing of this element along one axis inside its parent
// container.
typedef struct {
    Clay_SizingAxis
        width; // Controls the width sizing of the element, along the x axis.
    Clay_SizingAxis
        height; // Controls the height sizing of the element, along the y axis.
} Clay_Sizing;
// Controls "padding" in pixels, which is a gap between the bounding box of this
// element and where its children will be placed.
typedef struct {
    uint16_t left;
    uint16_t right;
    uint16_t top;
    uint16_t bottom;
} Clay_Padding;
// Controls various settings that affect the size and position of an element, as
// well as the sizes and positions of any child elements.
typedef struct {
    Clay_Sizing
        sizing; // Controls the sizing of this element inside it's parent
                // container, including FIT, GROW, PERCENT and FIXED sizing.
    Clay_Padding padding; // Controls "padding" in pixels, which is a gap
                          // between the bounding box of this element and where
                          // its children will be placed.
    uint16_t childGap;    // Controls the gap in pixels between child elements
                          // along the layout axis (horizontal gap for
                          // LEFT_TO_RIGHT, vertical gap for TOP_TO_BOTTOM).
    Clay_ChildAlignment
        childAlignment; // Controls how child elements are aligned on each axis.
    Clay_LayoutDirection
        layoutDirection; // Controls the direction in which child elements will
                         // be automatically laid out.
} Clay_LayoutConfig;
extern Clay_LayoutConfig CLAY_LAYOUT_DEFAULT;
// Controls how text "wraps", that is how it is broken into multiple lines when
// there is insufficient horizontal space.
typedef CLAY_PACKED_ENUM{
    // (default) breaks on whitespace characters.
    CLAY_TEXT_WRAP_WORDS,
    // Don't break on space characters, only on newlines.
    CLAY_TEXT_WRAP_NEWLINES,
    // Disable text wrapping entirely.
    CLAY_TEXT_WRAP_NONE,
} Clay_TextElementConfigWrapMode;
// Controls how wrapped lines of text are horizontally aligned within the outer
// text bounding box.
typedef CLAY_PACKED_ENUM{
    // (default) Horizontally aligns wrapped lines of text to the left hand side
    // of their bounding box.
    CLAY_TEXT_ALIGN_LEFT,
    // Horizontally aligns wrapped lines of text to the center of their bounding
    // box.
    CLAY_TEXT_ALIGN_CENTER,
    // Horizontally aligns wrapped lines of text to the right hand side of their
    // bounding box.
    CLAY_TEXT_ALIGN_RIGHT,
} Clay_TextAlignment;
// Controls various functionality related to text elements.
typedef struct {
    // A pointer that will be transparently passed through to the resulting
    // render command.
    void *userData;
    // The RGBA color of the font to render, conventionally specified as 0-255.
    Clay_Color textColor;
    // An integer transparently passed to Clay_MeasureText to identify the font
    // to use. The debug view will pass fontId = 0 for its internal text.
    uint16_t fontId;
    // Controls the size of the font. Handled by the function provided to
    // Clay_MeasureText.
    uint16_t fontSize;
    // Controls extra horizontal spacing between characters. Handled by the
    // function provided to Clay_MeasureText.
    uint16_t letterSpacing;
    // Controls additional vertical space between wrapped lines of text.
    uint16_t lineHeight;
    // Controls how text "wraps", that is how it is broken into multiple lines
    // when there is insufficient horizontal space. CLAY_TEXT_WRAP_WORDS
    // (default) breaks on whitespace characters. CLAY_TEXT_WRAP_NEWLINES
    // doesn't break on space characters, only on newlines. CLAY_TEXT_WRAP_NONE
    // disables wrapping entirely.
    Clay_TextElementConfigWrapMode wrapMode;
    // Controls how wrapped lines of text are horizontally aligned within the
    // outer text bounding box. CLAY_TEXT_ALIGN_LEFT (default) - Horizontally
    // aligns wrapped lines of text to the left hand side of their bounding box.
    // CLAY_TEXT_ALIGN_CENTER - Horizontally aligns wrapped lines of text to the
    // center of their bounding box. CLAY_TEXT_ALIGN_RIGHT - Horizontally aligns
    // wrapped lines of text to the right hand side of their bounding box.
    Clay_TextAlignment textAlignment;
} Clay_TextElementConfig;