src/bindings/clay.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ElementId"][::std::mem::size_of::<Clay_ElementId>() - 32usize];
    ["Alignment of Clay_ElementId"][::std::mem::align_of::<Clay_ElementId>() - 8usize];
    ["Offset of field: Clay_ElementId::id"][::std::mem::offset_of!(Clay_ElementId, id) - 0usize];
    ["Offset of field: Clay_ElementId::offset"][::std::mem::offset_of!(Clay_ElementId, offset) - 4usize];
    ["Offset of field: Clay_ElementId::baseId"][::std::mem::offset_of!(Clay_ElementId, baseId) - 8usize];
    ["Offset of field: Clay_ElementId::stringId"][::std::mem::offset_of!(Clay_ElementId, stringId) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_CornerRadius {
    pub topLeft: f32,
    pub topRight: f32,
    pub bottomLeft: f32,
    pub bottomRight: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_CornerRadius"][::std::mem::size_of::<Clay_CornerRadius>() - 16usize];
    ["Alignment of Clay_CornerRadius"][::std::mem::align_of::<Clay_CornerRadius>() - 4usize];
    ["Offset of field: Clay_CornerRadius::topLeft"][::std::mem::offset_of!(Clay_CornerRadius, topLeft) - 0usize];
    ["Offset of field: Clay_CornerRadius::topRight"][::std::mem::offset_of!(Clay_CornerRadius, topRight) - 4usize];
    ["Offset of field: Clay_CornerRadius::bottomLeft"][::std::mem::offset_of!(Clay_CornerRadius, bottomLeft) - 8usize];
    ["Offset of field: Clay_CornerRadius::bottomRight"]
        [::std::mem::offset_of!(Clay_CornerRadius, bottomRight) - 12usize];
};
pub const Clay_LayoutDirection_CLAY_LEFT_TO_RIGHT: Clay_LayoutDirection = 0;
pub const Clay_LayoutDirection_CLAY_TOP_TO_BOTTOM: Clay_LayoutDirection = 1;
pub type Clay_LayoutDirection = ::std::os::raw::c_uchar;
pub const Clay_LayoutAlignmentX_CLAY_ALIGN_X_LEFT: Clay_LayoutAlignmentX = 0;
pub const Clay_LayoutAlignmentX_CLAY_ALIGN_X_RIGHT: Clay_LayoutAlignmentX = 1;
pub const Clay_LayoutAlignmentX_CLAY_ALIGN_X_CENTER: Clay_LayoutAlignmentX = 2;
pub type Clay_LayoutAlignmentX = ::std::os::raw::c_uchar;
pub const Clay_LayoutAlignmentY_CLAY_ALIGN_Y_TOP: Clay_LayoutAlignmentY = 0;
pub const Clay_LayoutAlignmentY_CLAY_ALIGN_Y_BOTTOM: Clay_LayoutAlignmentY = 1;
pub const Clay_LayoutAlignmentY_CLAY_ALIGN_Y_CENTER: Clay_LayoutAlignmentY = 2;
pub type Clay_LayoutAlignmentY = ::std::os::raw::c_uchar;
pub const Clay__SizingType_CLAY__SIZING_TYPE_FIT: Clay__SizingType = 0;
pub const Clay__SizingType_CLAY__SIZING_TYPE_GROW: Clay__SizingType = 1;
pub const Clay__SizingType_CLAY__SIZING_TYPE_PERCENT: Clay__SizingType = 2;
pub const Clay__SizingType_CLAY__SIZING_TYPE_FIXED: Clay__SizingType = 3;
pub type Clay__SizingType = ::std::os::raw::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ChildAlignment {
    pub x: Clay_LayoutAlignmentX,
    pub y: Clay_LayoutAlignmentY,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ChildAlignment"][::std::mem::size_of::<Clay_ChildAlignment>() - 2usize];
    ["Alignment of Clay_ChildAlignment"][::std::mem::align_of::<Clay_ChildAlignment>() - 1usize];
    ["Offset of field: Clay_ChildAlignment::x"][::std::mem::offset_of!(Clay_ChildAlignment, x) - 0usize];
    ["Offset of field: Clay_ChildAlignment::y"][::std::mem::offset_of!(Clay_ChildAlignment, y) - 1usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_SizingMinMax {
    pub min: f32,
    pub max: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_SizingMinMax"][::std::mem::size_of::<Clay_SizingMinMax>() - 8usize];
    ["Alignment of Clay_SizingMinMax"][::std::mem::align_of::<Clay_SizingMinMax>() - 4usize];
    ["Offset of field: Clay_SizingMinMax::min"][::std::mem::offset_of!(Clay_SizingMinMax, min) - 0usize];
    ["Offset of field: Clay_SizingMinMax::max"][::std::mem::offset_of!(Clay_SizingMinMax, max) - 4usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_SizingAxis {
    pub size: Clay_SizingAxis__bindgen_ty_1,
    pub type_: Clay__SizingType,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union Clay_SizingAxis__bindgen_ty_1 {
    pub minMax: Clay_SizingMinMax,
    pub percent: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_SizingAxis__bindgen_ty_1"][::std::mem::size_of::<Clay_SizingAxis__bindgen_ty_1>() - 8usize];
    ["Alignment of Clay_SizingAxis__bindgen_ty_1"][::std::mem::align_of::<Clay_SizingAxis__bindgen_ty_1>() - 4usize];
    ["Offset of field: Clay_SizingAxis__bindgen_ty_1::minMax"]
        [::std::mem::offset_of!(Clay_SizingAxis__bindgen_ty_1, minMax) - 0usize];
    ["Offset of field: Clay_SizingAxis__bindgen_ty_1::percent"]
        [::std::mem::offset_of!(Clay_SizingAxis__bindgen_ty_1, percent) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_SizingAxis"][::std::mem::size_of::<Clay_SizingAxis>() - 12usize];
    ["Alignment of Clay_SizingAxis"][::std::mem::align_of::<Clay_SizingAxis>() - 4usize];
    ["Offset of field: Clay_SizingAxis::size"][::std::mem::offset_of!(Clay_SizingAxis, size) - 0usize];
    ["Offset of field: Clay_SizingAxis::type_"][::std::mem::offset_of!(Clay_SizingAxis, type_) - 8usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_Sizing {
    pub width: Clay_SizingAxis,
    pub height: Clay_SizingAxis,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_Sizing"][::std::mem::size_of::<Clay_Sizing>() - 24usize];
    ["Alignment of Clay_Sizing"][::std::mem::align_of::<Clay_Sizing>() - 4usize];
    ["Offset of field: Clay_Sizing::width"][::std::mem::offset_of!(Clay_Sizing, width) - 0usize];
    ["Offset of field: Clay_Sizing::height"][::std::mem::offset_of!(Clay_Sizing, height) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Padding {
    pub left: u16,
    pub right: u16,
    pub top: u16,
    pub bottom: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_Padding"][::std::mem::size_of::<Clay_Padding>() - 8usize];
    ["Alignment of Clay_Padding"][::std::mem::align_of::<Clay_Padding>() - 2usize];
    ["Offset of field: Clay_Padding::left"][::std::mem::offset_of!(Clay_Padding, left) - 0usize];
    ["Offset of field: Clay_Padding::right"][::std::mem::offset_of!(Clay_Padding, right) - 2usize];
    ["Offset of field: Clay_Padding::top"][::std::mem::offset_of!(Clay_Padding, top) - 4usize];
    ["Offset of field: Clay_Padding::bottom"][::std::mem::offset_of!(Clay_Padding, bottom) - 6usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_PaddingWrapper {
    pub wrapped: Clay_Padding,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay__Clay_PaddingWrapper"][::std::mem::size_of::<Clay__Clay_PaddingWrapper>() - 8usize];
    ["Alignment of Clay__Clay_PaddingWrapper"][::std::mem::align_of::<Clay__Clay_PaddingWrapper>() - 2usize];
    ["Offset of field: Clay__Clay_PaddingWrapper::wrapped"]
        [::std::mem::offset_of!(Clay__Clay_PaddingWrapper, wrapped) - 0usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_LayoutConfig {
    pub sizing: Clay_Sizing,
    pub padding: Clay_Padding,
    pub childGap: u16,
    pub childAlignment: Clay_ChildAlignment,
    pub layoutDirection: Clay_LayoutDirection,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_LayoutConfig"][::std::mem::size_of::<Clay_LayoutConfig>() - 40usize];
    ["Alignment of Clay_LayoutConfig"][::std::mem::align_of::<Clay_LayoutConfig>() - 4usize];
    ["Offset of field: Clay_LayoutConfig::sizing"][::std::mem::offset_of!(Clay_LayoutConfig, sizing) - 0usize];
    ["Offset of field: Clay_LayoutConfig::padding"][::std::mem::offset_of!(Clay_LayoutConfig, padding) - 24usize];
    ["Offset of field: Clay_LayoutConfig::childGap"][::std::mem::offset_of!(Clay_LayoutConfig, childGap) - 32usize];
    ["Offset of field: Clay_LayoutConfig::childAlignment"]
        [::std::mem::offset_of!(Clay_LayoutConfig, childAlignment) - 34usize];
    ["Offset of field: Clay_LayoutConfig::layoutDirection"]
        [::std::mem::offset_of!(Clay_LayoutConfig, layoutDirection) - 36usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay__Clay_LayoutConfigWrapper {
    pub wrapped: Clay_LayoutConfig,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay__Clay_LayoutConfigWrapper"][::std::mem::size_of::<Clay__Clay_LayoutConfigWrapper>() - 40usize];
    ["Alignment of Clay__Clay_LayoutConfigWrapper"][::std::mem::align_of::<Clay__Clay_LayoutConfigWrapper>() - 4usize];
    ["Offset of field: Clay__Clay_LayoutConfigWrapper::wrapped"]
        [::std::mem::offset_of!(Clay__Clay_LayoutConfigWrapper, wrapped) - 0usize];
};
unsafe extern "C" {
    pub static mut CLAY_LAYOUT_DEFAULT: Clay_LayoutConfig;
}
pub const Clay_TextElementConfigWrapMode_CLAY_TEXT_WRAP_WORDS: Clay_TextElementConfigWrapMode = 0;
pub const Clay_TextElementConfigWrapMode_CLAY_TEXT_WRAP_NEWLINES: Clay_TextElementConfigWrapMode = 1;
pub const Clay_TextElementConfigWrapMode_CLAY_TEXT_WRAP_NONE: Clay_TextElementConfigWrapMode = 2;
pub type Clay_TextElementConfigWrapMode = ::std::os::raw::c_uchar;
pub const Clay_TextAlignment_CLAY_TEXT_ALIGN_LEFT: Clay_TextAlignment = 0;
pub const Clay_TextAlignment_CLAY_TEXT_ALIGN_CENTER: Clay_TextAlignment = 1;
pub const Clay_TextAlignment_CLAY_TEXT_ALIGN_RIGHT: Clay_TextAlignment = 2;
pub type Clay_TextAlignment = ::std::os::raw::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_TextElementConfig {
    pub userData: *mut ::std::os::raw::c_void,
    pub textColor: Clay_Color,
    pub fontId: u16,
    pub fontSize: u16,
    pub letterSpacing: u16,
    pub lineHeight: u16,
    pub wrapMode: Clay_TextElementConfigWrapMode,
    pub textAlignment: Clay_TextAlignment,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_TextElementConfig"][::std::mem::size_of::<Clay_TextElementConfig>() - 40usize];
    ["Alignment of Clay_TextElementConfig"][::std::mem::align_of::<Clay_TextElementConfig>() - 8usize];
    ["Offset of field: Clay_TextElementConfig::userData"]
        [::std::mem::offset_of!(Clay_TextElementConfig, userData) - 0usize];
    ["Offset of field: Clay_TextElementConfig::textColor"]
        [::std::mem::offset_of!(Clay_TextElementConfig, textColor) - 8usize];
    ["Offset of field: Clay_TextElementConfig::fontId"]
        [::std::mem::offset_of!(Clay_TextElementConfig, fontId) - 24usize];
    ["Offset of field: Clay_TextElementConfig::fontSize"]
        [::std::mem::offset_of!(Clay_TextElementConfig, fontSize) - 26usize];
    ["Offset of field: Clay_TextElementConfig::letterSpacing"]
        [::std::mem::offset_of!(Clay_TextElementConfig, letterSpacing) - 28usize];
    ["Offset of field: Clay_TextElementConfig::lineHeight"]
        [::std::mem::offset_of!(Clay_TextElementConfig, lineHeight) - 30usize];
    ["Offset of field: Clay_TextElementConfig::wrapMode"]
        [::std::mem::offset_of!(Clay_TextElementConfig, wrapMode) - 32usize];
    ["Offset of field: Clay_TextElementConfig::textAlignment"]
        [::std::mem::offset_of!(Clay_TextElementConfig, textAlignment) - 33usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_TextElementConfigWrapper {
    pub wrapped: Clay_TextElementConfig,
}
